# QuickTimeTcl3.1

./: .gitignore  CHANGES  README  README.md  ReadMe.rtf
ExampleCode/: AsyncUrlMovie.tcl  README  README.md
docs/: docs.helpindex  movie.html  quicktimetcl.html  seqgrabber.html
macos/: QuickTimeTcl.mcp
sources/: .gitignore  Broadcast.c  EffectCommand.c  Makefile.am  Makefile.in  MoviePlayer.c  MoviePlayer.h  MovieQTVRUtils.c  MovieUtils.c  NavigationGetFile.c  QuickTimeTcl.c  QuickTimeTcl.cbp  QuickTimeTcl.h  QuickTimeTcl.r  QuickTimeTcl.vcproj  SeqGrabber.c  SeqGrabber.h  Tfp_Arrays.c  TracksCommand.c  UserData.c  Utils.c  Utils.h  config.h.in  configure  configure.ac  configure.scan  osxMacTcl.h
sources/QuickTimeTcl.pbproj/: project.pbxproj
sources/QuickTimeTcl.xcodeproj/: project.pbxproj
